# unity2

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  NOTICE
src/: backend_assertion.rs  class.rs  diag.rs  error.rs  injection.rs  lib.rs  lookup.rs  method.rs  prelude.rs
src/engine/: bundle.rs  color.rs  mod.rs  object.rs  scene.rs  u2d.rs  ui.rs  vector.rs
src/engine/rendering/: mod.rs  universal.rs
src/il2cpp/: api.rs  assembly.rs  class.rs  method.rs  mod.rs
src/system/: collections.rs  delegate.rs  mod.rs  reflection.rs  string.rs
unity-macro/: Cargo.toml
unity-macro/src/: lib.rs
unity-macro/src/data_models/: class_attrs.rs  field.rs  method.rs
unity-macro/src/util/: kv_parser.rs  mod.rs
