[package]
name = "unity2"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/DivineDragonFanClub/unity2"

[dependencies]
skyline = "0.6"
lazysimd = { git = "https://github.com/Raytwo/lazysimd" }
unity-macro = { path = "./unity-macro" }

[features]
default = ["fe-engage"]
fe-engage = []